[package]
name = "oxipng-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe.workspace = true
rayon.workspace = true
rfd.workspace = true

oxipng = { version = "9.1", default-features = false, features = [
  "parallel",
  "filetime",
] }

[package.metadata.bundle]
name = "Oxipng GUI"
identifier = "me.kosette.minitools.oxipng-gui"
copyright = "Copyright (c) Kosette 2025"
category = "public.app-category.productivity"
short_description = "Optimize png images losslessly. Presets: 0-6"
